force-app/main/default/objects/Opportunity/fields/Compteur_Devis_Accepte__c.field-meta.xml
<CustomField>
    <fullName>Compteur_Devis_Accepte__c</fullName>
    <label>Compteur_Devis_Accepte</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Accepté</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>