force-app/main/default/objects/Opportunity/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>IF (OPP_Contact__r.FirstName == NULL, OPP_Contact__r.LastName,
IF (OPP_Contact__r.LastName == NULL, OPP_Contact__r.FirstName, 
OPP_Contact__r.FirstName + &apos; &apos; + OPP_Contact__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>