force-app/main/default/objects/Opportunity/fields/DEV_StatutDevisPrincipal__c.field-meta.xml
<CustomField>
    <fullName>DEV_StatutDevisPrincipal__c</fullName>
    <formula>TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du devis principal</label>
    <type>Text</type>
</CustomField>