force-app/main/default/objects/Opportunity/fields/DS029__c.field-meta.xml
<CustomField>
    <fullName>DS029__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS029</label>
    <referenceTo>RempalcementProduits__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>