force-app/main/default/objects/Opportunity/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OPP_CompteClientFinal__c</field>
            <operation>equals</operation>
            <valueField>Asset.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>