force-app/main/default/objects/Opportunity/fields/First_Quote__c.field-meta.xml
<CustomField>
    <fullName>First_Quote__c</fullName>
    <description>First Quote number on opp</description>
    <label>First Quote #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>