force-app/main/default/objects/Opportunity/fields/Forecast_amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_amount__c</fullName>
    <formula>Montant__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>