force-app/main/default/objects/Opportunity/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <formula>IF( Amount = 0, SyncedQuote.DEV_Montant__c, Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>