force-app/main/default/objects/Opportunity/fields/OP_suractif__c.field-meta.xml
<CustomField>
    <fullName>OP_suractif__c</fullName>
    <formula>IF(  ISBLANK( Equipement__r.Id) ,20,30)</formula>
    <label>Sur Actif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>