force-app/main/default/objects/Opportunity/fields/OPP_Agent__c.field-meta.xml
<CustomField>
    <fullName>OPP_Agent__c</fullName>
    <label>Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>066</fullName>
                <label>Perino Carlo</label>
            </value>
            <value>
                <fullName>067</fullName>
                <label>Cardani Rappr.Ind.srl</label>
            </value>
            <value>
                <fullName>060</fullName>
                <label>Fioravanti Fabio</label>
            </value>
            <value>
                <fullName>068</fullName>
                <label>Climarai srl</label>
            </value>
            <value>
                <fullName>071</fullName>
                <label>Consoni Egidio</label>
            </value>
            <value>
                <fullName>072</fullName>
                <label>GST S.a.s. di Tavani &amp; C.</label>
            </value>
            <value>
                <fullName>075</fullName>
                <label>Ingegneri Fontanelli</label>
            </value>
            <value>
                <fullName>077</fullName>
                <label>Pizzeghello Franco</label>
            </value>
            <value>
                <fullName>078</fullName>
                <label>Valentino Martiri</label>
            </value>
            <value>
                <fullName>099</fullName>
                <label>Bureau</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>