force-app/main/default/objects/Opportunity/fields/OPP_CasUsage__c.field-meta.xml
<CustomField>
    <fullName>OPP_CasUsage__c</fullName>
    <description>Application Area or Use Case</description>
    <label>Cas d&apos;Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>drying</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>frying</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>pastorization</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>deodorization</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>baking</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>roasting</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>freezing</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>surface treatment</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>curing</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>pressing</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>reactor heating</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>rendering</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>sterilization</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>distillation</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>preserving</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>space heating</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>humidification</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>coating</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>painting</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>coupling</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>printing</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>refining</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>separation</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>moulding</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>forming</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>extrusion</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>