force-app/main/default/objects/Opportunity/fields/OPP_Categorie__c.field-meta.xml
<CustomField>
    <fullName>OPP_Categorie__c</fullName>
    <description>Ce champ est utilisé pour la modélisation du process de remplacement de pièce sur les équipements par les techniciens.
NE PAS SUPPRIMER</description>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intervention de service</fullName>
                <label>Devis Technicien</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Proposition commerciale</fullName>
                <isActive>false</isActive>
                <label>Proposition commerciale</label>
            </value>
            <value>
                <fullName>Proposition de contrat</fullName>
                <isActive>false</isActive>
                <label>Proposition de contrat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>