force-app/main/default/objects/Opportunity/fields/OPP_ChargeDAffaire__c.field-meta.xml
<CustomField>
    <fullName>OPP_ChargeDAffaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé d&apos;affaire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>