force-app/main/default/objects/Opportunity/fields/OPP_Classification__c.field-meta.xml
<CustomField>
    <fullName>OPP_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACD Achèvement Commande</fullName>
            </value>
            <value>
                <fullName>AGC Achèvement Commande sous garantie</fullName>
            </value>
            <value>
                <fullName>AUD Audit Chaufferie</fullName>
            </value>
            <value>
                <fullName>CIL Cde interne location</fullName>
            </value>
            <value>
                <fullName>CIM Cde interne entretien Matériels loc/occ</fullName>
            </value>
            <value>
                <fullName>CLT Location TEMPORAIRE</fullName>
            </value>
            <value>
                <fullName>CON CONTRAT</fullName>
            </value>
            <value>
                <fullName>CRI COMPTE RENDU D&apos;INTERVENTION</fullName>
            </value>
            <value>
                <fullName>FOR FORMATION</fullName>
            </value>
            <value>
                <fullName>GAR GARANTIE</fullName>
            </value>
            <value>
                <fullName>GLO OFFRE GLOBALE</fullName>
            </value>
            <value>
                <fullName>INV Investissement avec lancement en fabrica</fullName>
            </value>
            <value>
                <fullName>LOC LOCATION</fullName>
            </value>
            <value>
                <fullName>PFI PRODUITS FINIS</fullName>
            </value>
            <value>
                <fullName>PRE PIÈCES DE RECHANGE</fullName>
            </value>
            <value>
                <fullName>PRO PRODUITS CONDITIONNEMENT</fullName>
            </value>
            <value>
                <fullName>REG RÉGIE</fullName>
            </value>
            <value>
                <fullName>TFG GROS TRAVAUX</fullName>
            </value>
            <value>
                <fullName>TFP TRAVAUX FORFAITAIRES PETIT TRAVAUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>