force-app/main/default/objects/Opportunity/fields/OPP_CodeClient__c.field-meta.xml
<CustomField>
    <fullName>OPP_CodeClient__c</fullName>
    <formula>Account.ACC_CodeClient__c</formula>
    <inlineHelpText>Ce champ est repris automatiquement du Compte il représente le code client renseigné sur le Compte.</inlineHelpText>
    <label>Code Client</label>
    <type>Text</type>
</CustomField>