force-app/main/default/objects/Opportunity/fields/OPP_Commentaires__c.field-meta.xml
<CustomField>
    <fullName>OPP_Commentaires__c</fullName>
    <label>Commentaires du deuil</label>
    <type>TextArea</type>
</CustomField>