force-app/main/default/objects/Opportunity/fields/OPP_Concurrent__c.field-meta.xml
<CustomField>
    <fullName>OPP_Concurrent__c</fullName>
    <label>Concurrent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OPP_Type_de_concurrent__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>LTS - Atlas Copco</fullName>
            </value>
            <value>
                <fullName>Tibbloc</fullName>
            </value>
            <value>
                <fullName>BWT</fullName>
            </value>
            <value>
                <fullName>Suez</fullName>
            </value>
            <value>
                <fullName>Kurita</fullName>
            </value>
            <value>
                <fullName>Nalco</fullName>
            </value>
            <value>
                <fullName>Tresch</fullName>
            </value>
            <value>
                <fullName>Axima</fullName>
            </value>
            <value>
                <fullName>Ciat</fullName>
            </value>
            <value>
                <fullName>Bono</fullName>
            </value>
            <value>
                <fullName>ICI Caldaie</fullName>
            </value>
            <value>
                <fullName>LCI - Bosch</fullName>
            </value>
            <value>
                <fullName>Saacke</fullName>
            </value>
            <value>
                <fullName>Secat</fullName>
            </value>
            <value>
                <fullName>Clayton</fullName>
            </value>
            <value>
                <fullName>Viessmann</fullName>
            </value>
            <value>
                <fullName>Weishaupt</fullName>
            </value>
            <value>
                <fullName>HAMON STEIN</fullName>
            </value>
            <value>
                <fullName>Dalkia - EDF</fullName>
            </value>
            <value>
                <fullName>Engie - Cofely</fullName>
            </value>
            <value>
                <fullName>Hervé Thermique</fullName>
            </value>
            <value>
                <fullName>Idex</fullName>
            </value>
            <value>
                <fullName>CMI</fullName>
            </value>
            <value>
                <fullName>Cometi</fullName>
            </value>
            <value>
                <fullName>Le Nerrant</fullName>
            </value>
            <value>
                <fullName>CORETEC</fullName>
            </value>
            <value>
                <fullName>Capingelec</fullName>
            </value>
            <value>
                <fullName>Utilities Performance</fullName>
            </value>
            <value>
                <fullName>Technip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>