force-app/main/default/objects/Opportunity/fields/OPP_Contact__c.field-meta.xml
<CustomField>
    <fullName>OPP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ce champs vous permet de sélectionner un contact dans la liste globale des contacts existants.
Assurez vous que le contact renseigné fait parti des contacts associés (direct ou indirect) au compte. 
Un contrôle de cohérence sera ajouter prochainement.</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>OPP - Le contact rattaché à votre opportunité est Obsolète. 
La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre.</errorMessage>
        <filterItems>
            <field>Contact.ACC_Contact_obsolete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>