force-app/main/default/objects/Opportunity/fields/OPP_CRMId__c.field-meta.xml
<CustomField>
    <fullName>OPP_CRMId__c</fullName>
    <description>Clef d&apos;identification Salesforce unique</description>
    <displayFormat>OPP-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>CRM Id</label>
    <type>AutoNumber</type>
</CustomField>