force-app/main/default/objects/Opportunity/fields/OPP_DateDeclenchementPenalites__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateDeclenchementPenalites__c</fullName>
    <label>Date de déclenchement des pénalités</label>
    <type>Date</type>
</CustomField>