force-app/main/default/objects/Opportunity/fields/OPP_DateDeCommandeEnvisagee__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateDeCommandeEnvisagee__c</fullName>
    <inlineHelpText>Campo obbligatorio Data Prevista dell&apos;ordine</inlineHelpText>
    <label>Date de commande envisagée</label>
    <type>Date</type>
</CustomField>