force-app/main/default/objects/Opportunity/fields/OPP_DateDeCreationDeCommande__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateDeCreationDeCommande__c</fullName>
    <label>Date de création de commande</label>
    <type>Date</type>
</CustomField>