force-app/main/default/objects/Opportunity/fields/OPP_DateDeLivraisonEnvisagee__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateDeLivraisonEnvisagee__c</fullName>
    <label>Date de livraison envisagée</label>
    <type>Date</type>
</CustomField>