force-app/main/default/objects/Opportunity/fields/OPP_DateReceptionDevisSouhaitee__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateReceptionDevisSouhaitee__c</fullName>
    <label>Date de réception de devis souhaitée</label>
    <type>Date</type>
</CustomField>