force-app/main/default/objects/Opportunity/fields/OPP_DateValideeDeMAD__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateValideeDeMAD__c</fullName>
    <label>Date validée de MAD (ARC)</label>
    <type>Date</type>
</CustomField>