force-app/main/default/objects/Opportunity/fields/OPP_DateValideeDeTravaux__c.field-meta.xml
<CustomField>
    <fullName>OPP_DateValideeDeTravaux__c</fullName>
    <label>Date validée de Travaux (ARC)</label>
    <type>Date</type>
</CustomField>