force-app/main/default/objects/Opportunity/fields/OPP_Domaine__c.field-meta.xml
<CustomField>
    <fullName>OPP_Domaine__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>Chaudières</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Traitement de l&apos;eau</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Air</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Services</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Location</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>INCINEX</label>
            </value>
            <value>
                <fullName>19</fullName>
                <isActive>false</isActive>
                <label>AST : AIR STANDARD</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>ESP : EAU SPECIFIQUES</label>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>EST : EAU STANDARDS</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>GTX : GROS TRAVAUX</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>INV : INVESTISSEMENT</label>
            </value>
            <value>
                <fullName>9</fullName>
                <isActive>false</isActive>
                <label>LOC : LOCATION</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>MAT : MATÉRIEL THERMIQUE</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>OCC : OCCASION</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>PRE : PIÈCES DE RECHANGE</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>PRJ : PROJET INTERNE</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>PRO : PRODUIT CONDITIONNEMENT</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>PTX : PETIT TRAVAUX</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>RED : RECHERCHE ET DEVELOPPEMENT</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>SIN : SINISTRES</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>STO : STOCK OCCASION</label>
            </value>
            <value>
                <fullName>21</fullName>
                <isActive>false</isActive>
                <label>TDF : TUBES DE FUMÉES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>