force-app/main/default/objects/Opportunity/fields/OPP_Entite_BW__c.field-meta.xml
<CustomField>
    <fullName>OPP_Entite_BW__c</fullName>
    <formula>TEXT(  CreatedBy.USER_EntiteBW__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entité BW</label>
    <type>Text</type>
</CustomField>