force-app/main/default/objects/Opportunity/fields/OPP_MotifDeLaPerte__c.field-meta.xml
<CustomField>
    <fullName>OPP_MotifDeLaPerte__c</fullName>
    <label>Motif de la perte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perdu face à la concurrence</fullName>
            </value>
            <value>
                <fullName>Pas de budget / Perte des fonds</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Spécifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>