force-app/main/default/objects/Opportunity/fields/OPP_MotifSansSuite__c.field-meta.xml
<CustomField>
    <fullName>OPP_MotifSansSuite__c</fullName>
    <label>Motif sans suite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Reporté</fullName>
            </value>
            <value>
                <fullName>Date de clôture dépassée</fullName>
                <isActive>false</isActive>
                <label>Date de clôture dépassée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>