force-app/main/default/objects/Opportunity/fields/OPP_Nombre_de_Devis__c.field-meta.xml
<CustomField>
    <fullName>OPP_Nombre_de_Devis__c</fullName>
    <label>Nombre de Devis</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>