force-app/main/default/objects/Opportunity/fields/OPP_NomDuConcurrent__c.field-meta.xml
<CustomField>
    <fullName>OPP_NomDuConcurrent__c</fullName>
    <label>Nom du concurrent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>