force-app/main/default/objects/Opportunity/fields/OPP_NumDevisGPIC__c.field-meta.xml
<CustomField>
    <fullName>OPP_NumDevisGPIC__c</fullName>
    <externalId>true</externalId>
    <label>N° Devis GPIC</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>