force-app/main/default/objects/Opportunity/fields/OPP_NumeroDeCommandeClient__c.field-meta.xml
<CustomField>
    <fullName>OPP_NumeroDeCommandeClient__c</fullName>
    <label>Numéro de commande client</label>
    <length>20</length>
    <type>Text</type>
</CustomField>