force-app/main/default/objects/Opportunity/fields/OPP_OrgineDeLaDemande__c.field-meta.xml
<CustomField>
    <fullName>OPP_OrgineDeLaDemande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origine de la demande</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>