force-app/main/default/objects/Opportunity/fields/OPP_ProvenancePiste__c.field-meta.xml
<CustomField>
    <fullName>OPP_ProvenancePiste__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provenance Piste</label>
    <type>Checkbox</type>
</CustomField>