force-app/main/default/objects/Opportunity/fields/OPP_Requete__c.field-meta.xml
<CustomField>
    <fullName>OPP_Requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>