force-app/main/default/objects/Opportunity/fields/OPP_RevueDOffre__c.field-meta.xml
<CustomField>
    <fullName>OPP_RevueDOffre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revue d&apos;offre</label>
    <type>Checkbox</type>
</CustomField>