force-app/main/default/objects/Opportunity/fields/OPP_SousDomaine__c.field-meta.xml
<CustomField>
    <fullName>OPP_SousDomaine__c</fullName>
    <label>Sous-domaine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OPP_Domaine__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ADOUCISSEUR</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AÉROTHERMES</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AUTRES CHAUDIÈRES</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>AUTRES TA SPÉCIFIQUES</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>AUTRES TA STANDARD</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>AUTRES TE SPECIFIQUES</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>AUTRES TE STANDARD</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>BACHE DÉGAZANTE</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>BRÚLEURS</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>BWB</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>BWD</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>BWR</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CENTRALE FOYER ÉCHANGEUR</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CHAUDIERES EAU CHAUDE &lt; 5MW</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>CHAUDIÈRE VAPORISATION BASSE PRESSION</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>CONTRATS CHAUDIÈRES</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>CHAUDIERES EAU CHAUDE &gt; 5MW</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>CONTRAT LOW COST</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>CONTRATS AIR</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>CONTRATS EAU</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>CONTRATS GLOBAUX</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>DÉCARBONATATION</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>DÉGAZEURS</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>DÉMINÉRALISATION</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>DIVERS SERPENTINS</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>DIVERS TUBES DE FUMEES</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>FILTRES</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>FORMATION</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>GENERATEUR</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>GROS TRAVAUX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>